--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -99,9 +99,28 @@
 
     div {
       background-color: #46459A;
-      padding: 10px!important;
+      padding: 10px !important;
       margin-top: 15px;
       width: 220px;
+
+      button {
+        background-color: transparent;
+        background-image: none;
+        -webkit-background-clip: initial;
+        background-clip: initial;
+        -webkit-text-fill-color: initial;
+        border: none;
+        margin-left: 0;
+        display: flex;
+        gap: 10px;
+        align-items: center;
+        padding: 0px 5px;
+        color: $white;
+        font-size: 14px;
+        font-weight: 400;
+        margin-bottom: 10px;
+      }
+
       a {
         display: flex;
         gap: 10px;
@@ -112,7 +131,8 @@
         font-weight: 400;
         margin-bottom: 10px;
       }
-      a:hover{
+
+      a:hover {
         background-color: transparent !important;
       }
     }
