--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -24,6 +24,6 @@ $success: $orange;
 $info: $gold;
 $warning: $darkblue;
 
-@import "/node_modules/bootstrap/scss/bootstrap";
+@use "/node_modules/bootstrap/scss/bootstrap";
 
 
