--- a/src/components/heroSection/hero.module.scss
+++ b/src/components/heroSection/hero.module.scss
@@ -1,4 +1,4 @@
-@import "../../styles/_variable.scss";
+@use "../../styles/_variable.scss";
 @font-face {
     font-family: 'NHL Ducks';
     src: url('/fonts/NHLDucks.woff2') format('woff2');
@@ -20,9 +20,9 @@
 
 .heroSection {
     position: relative;
-    min-height: 120vh;
+    min-height: 110vh;
     transition: background-image 1s ease-in-out;
-    overflow: visible;
+    overflow: hidden;
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-position: center;
@@ -46,6 +46,7 @@
         position: relative;
         justify-content: center;
         align-items: center;
+        z-index: 1;
         opacity: 0.5; 
         transform: scale(0.8);
         transition: transform 0.5s ease, opacity 0.5s ease;
@@ -83,6 +84,8 @@
         width: 50%;
         margin-left: 70px;
         max-width: 550px;
+        position: relative;
+        z-index: -1;
         margin-top: -80px;
         transition: background-image 1s ease-in-out;
         p{
@@ -91,21 +94,21 @@
         }
         h1 {
             font-family: 'NHL Ducks';
-            color: $white;
+            color: white;
             font-size: 65px;
             font-weight: 600;
             font-weight: 500;
             margin-top:-20px;
             span {
                 display: block;
-                color: $info;
+                color: #EE9A2A;
                 margin-top: -20px;
             }
         }
 
         button {
             width: 130px;
-            background-image: linear-gradient(90deg, $secondary, $success);
+            background-image: linear-gradient(90deg, #C20013, #E14C00);
             padding: 8px 10px 8px 0px;
             clip-path: polygon(0% 0%, 80% 0%, 100% 100%, 0% 100%);
             border: none;
